Removed unnecessary links and added target attributes

--- a/index.html
+++ b/index.html
@@ -14,8 +14,6 @@
         <nav>
             <ul class="navigation">
                 <a href="#"><li>Traineeship</li></a>
-                <a href="#"><li>DSA</li></a>
-                <a href="#"><li>Web</li></a>
             </ul>
         </nav>
     </header>
@@ -25,7 +23,7 @@
             <p>These are the assignments assigned by the mentors during traineeship period.</p>
         </div>
         <div class="collection">
-            <a href="https://git.bajratechnologies.com/mohanbasnet/linux-commands-and-shell-script">
+            <a href="https://git.bajratechnologies.com/mohanbasnet/linux-commands-and-shell-script" target="_blank">
                 <div class="items">
                     <img src="img/shellscript.png">
                     <h6>Contact Directory with Shell Script</h6>
