Add javascript project

--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
                 <p>These are the assignments assigned by the mentors during traineeship period.</p>
             </div>
             <div class="collection">
+                <a href="https://git.bajratechnologies.com/mohanbasnet/website-design-assignment" target="_blank">
+                    <div class="items">
+                        <img src="img/landingpage.png">
+                        <h6>Design-to-Code Assignment (HTML/CSS)</h6>
+                    </div>
+                </a>
+
                 <a href="https://git.bajratechnologies.com/mohanbasnet/linux-commands-and-shell-script" target="_blank">
                     <div class="items">
                         <img src="img/shellscript.png">
@@ -46,6 +53,15 @@
                         <h6>Github Page with HTML5 & CSS3</h6>
                     </div>
                 </a>
+
+                <a href="https://git.bajratechnologies.com/mohanbasnet/javascript101" target="_blank">
+                    <div class="items">
+                        <img src="img/js.png">
+                        <h6>JavaScript101</h6>
+                    </div>
+                </a>
+
+                
                 
             </div>
         </div>
