Add RoadRacer Assignment

--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
                 <p>These are the assignments assigned by the mentors during traineeship period.</p>
             </div>
             <div class="collection">
+
+                <a href="https://git.bajratechnologies.com/mohanbasnet/raodracer-assignment" target="_blank">
+                    <div class="items">
+                        <img src="img/roadracer.png">
+                        <h6>RoadRacer - JS Assignment</h6>
+                    </div>
+                </a>
+
                 <a href="https://git.bajratechnologies.com/mohanbasnet/website-design-assignment" target="_blank">
                     <div class="items">
                         <img src="img/landingpage.png">
