--- a/index.html
+++ b/index.html
@@ -55,22 +55,24 @@
                 <p>These are short practice projects done while learning specific topics.</p>
             </div>
             <div class="collection">
+                <a href="https://git.bajratechnologies.com/mohanbasnet/js-shopping-list" target="_blank">
+                    <div class="items">
+                        <img src="img/shopping.png">
+                        <h6>Shopping List - JS</h6>
+                    </div>
+                </a>
                 <a href="https://github.com/basnetanish2030/basnetanish2030.github.io" target="_blank">
                     <div class="items">
                         <img src="img/gihubpage.png">
                         <h6>Github Page with HTML5 & CSS3</h6>
                     </div>
                 </a>
-
                 <a href="https://git.bajratechnologies.com/mohanbasnet/javascript101" target="_blank">
                     <div class="items">
                         <img src="img/js.png">
                         <h6>JavaScript101</h6>
                     </div>
                 </a>
-
-                
-                
             </div>
         </div>
 
